# CROOM

./: .gitignore  CMakeLists.txt  README.md
assets/: map.csv
include/core/: 2d_render.hpp  bsp.hpp  graphics_window.hpp  raycast.hpp  user_input.hpp  window.hpp
include/core/services/: graphics_window.hpp
include/game/: entity.hpp  game.hpp  linedef.hpp  map.hpp  player.hpp  sprite.hpp  wall.hpp
include/utils/: const.hpp  globals.hpp  line_segment.hpp  vec2.hpp
src/core/: 2d_renderer.cpp  bsp.cpp  graphics_window.cpp  main.cpp  raycast.cpp  user_input.cpp  window.cpp
src/core/services/: 2d_renderer.cpp  graphics_window.cpp
src/game/: map.cpp  player.cpp  sprite.cpp
src/utils/: line_segment.cpp  load_texture.cpp  paritition.cpp
